fix status text align

--- a/src/client/ui/styles.less
+++ b/src/client/ui/styles.less
@@ -410,6 +410,7 @@
                 border: 0;
                 overflow: hidden;
                 visibility: hidden;
+                flex: 1;
     
                 &.determinate .value {
                     background-color: #36B6E5;
